# BucketList

my-fastapi-app/: README.md  pyproject.toml
my-fastapi-app/dev/: bucketlist.db  data.json  database.py  main.py  models.py  server.py
my-fastapi-app/dev/routes/: add_item.py
my-fastapi-app/dev/static/: index.html  script.js  style.css
my-fastapi-app/src/my_fastapi_app/: server.py
my-fastapi-app/src/my_fastapi_app/routes/: add_item.py
